# yae_example_project

./: .gitignore  CMakeLists.txt  readme.md  yae_project.json
src/hello_world/: CMakeLists.txt
src/hello_world/private/: main.cpp
